# OCP-V1

./: .gitignore  AUDIT_FINDINGS.md  DECISION_LOG.md  HANDOFF.md  IMPLEMENTATION-SUMMARY.md  LICENSE  PROJECT_STATUS.md  README.md  RESEARCH_LOG.md  analysis_options.yaml  example-bridge.js  package-lock.json  package.json  project-context.md  pubspec.yaml  test-rak-connection.js
.github/workflows/: build-windows.yml  ci.yml  flutter-ci.yml
apps/desktop/: README.md  electron-builder.yml  electron.vite.config.ts  package.json  tailwind.config.js  tsconfig.json
apps/mobile/: package.json
apps/ocp_app/: .gitignore  Makefile  README.md  analysis_options.yaml  pubspec.yaml
apps/ocp_app/linux/: CMakeLists.txt  my_application.cc
apps/ocp_app/linux/flutter/: generated_plugin_registrant.cc  generated_plugin_registrant.h
apps/ocp_app/linux/runner/: CMakeLists.txt  my_application.cc  my_application.h
docs/offline-app/: mvp-scope.md  target-order.md
docs/ui/: WORKSPACE_DESIGN.md
scripts/: build-android.sh  build-desktop.sh  download-us-map.js  field-validation.sh  generate-desktop-icon.cjs  run-ruview-simulator.sh  update-meshtastic-firmware.js
specs/: DESIGN_GOALS.md  ENGINEERING_PRINCIPLES.md  OCP_ENGINEERING_SPEC.md  PRODUCT_REQUIREMENTS_SPECIFICATION_V2.md  PROJECT_CHARTER.md  PROJECT_VISION.md  README.md  build-plan-v2.md  build-plan.md  charter.md  maps-spec.md  odp-spec.md  onp-spec.md  prs.md
specs/adr/: README.md
test/: offline-core.test.js
tools/benchmark/: pubspec.yaml
tools/mock_device/: pubspec.yaml
tools/mock_position_feed/: pubspec.yaml
(+133 files in other folders)
